// Copyright 2016 Google Inc. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package ctmap;

import "google/protobuf/timestamp.proto";
import "github.com/google/keytransparency/core/proto/signature/signature.proto";

//
// Data types
//

// MapHead is the head node of the Merkle Tree as well as additional metadata
// for the tree.
message MapHead {
  // realm is the domain identifier for the transparent map.
  string realm = 1;
  // epoch is the epoch number of this map head.
  int64 epoch = 2;
  // root is the value of the root node of the Merkle tree.
  bytes root = 3;
  // issue_time is the time when this epoch was created. Monotonically
  // increasing.
  google.protobuf.Timestamp issue_time = 4;
  // max_sequence_number contains the maximum mutation sequence number included
  // in this map head.
  uint64 max_sequence_number = 5;
}

// SignedMapHead represents a signed state of the Merkel Tree.
message SignedMapHead {
  // map_head contains the head node of the Merkle Tree along with other
  // metadata.
  MapHead map_head = 1;
  // signatures is a set of map_head signatures. Each signature is identified by
  // the first 64 bits of the public key that verifies it.
  map<string, signature.DigitallySigned> signatures = 2;
}
